RESOLVED FIXED286168
[ iOS Debug ] 3 imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003*.html tests are constantly crashing.
https://bugs.webkit.org/show_bug.cgi?id=286168
Summary [ iOS Debug ] 3 imported/w3c/web-platform-tests/css/css-contain/contain-size-...
Yasmin Karimi
Reported 2025-01-17 13:49:23 PST
Created attachment 473936 [details] stderr.txt The following 3 test are crashing on iOS Debug: imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003a.html imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003b.html imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003c.html HISTORY: https://results.webkit.org/?platform=ios&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-contain%2Fcontain-size-replaced-003a.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-contain%2Fcontain-size-replaced-003b.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-contain%2Fcontain-size-replaced-003c.html&style=debug STDERR: Attached REPRODUCIBILITY: I was able to reproduce this issue on the iOS 18.2 simulator at ToT using the following command: run-webkit-tests --ios-simulator --debug imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003a.html imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003b.html imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003c.html
Attachments
stderr.txt (16.43 KB, text/plain)
2025-01-17 13:49 PST, Yasmin Karimi
no flags
[fast-cq]Patch (2.81 KB, patch)
2025-01-23 16:00 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2025-01-17 13:49:31 PST
alan
Comment 2 2025-01-23 16:00:20 PST
Created attachment 473991 [details] [fast-cq]Patch
EWS
Comment 3 2025-01-24 05:24:34 PST
Committed 289342@main (fcca220e0dcb): <https://commits.webkit.org/289342@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473991 [details].
Note You need to log in before you can comment on or make changes to this bug.