[ iOS Debug ] 3 imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-003*.html tests are constantly crashing. https://bugs.webkit.org/show_bug.cgi?id=286168# <rdar://problem/143150963>

Reviewed by Antti Koivisto.

1. when a replaced element's intrinsic size changes we invalidate the associated IFC object
2. setNeedsLayoutIfNeededAfterIntrinsicSizeChange (as the name implies) is supposed to mark the renderer dirty only when its intrinsic size changed
but the logic seems to have evolved to cover no-size-change cases as well.

When other, unrelated changes trigger partial layout on IFC, we may skip this dirty renderer (#2).
(e.g. video is on the first line, while partial layout start at the second line).
Coming back from such partial layouts we may find some renderers still dirty -> ASSERT.

This patch covers cases when base class decides to dirty video renderers.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/rendering/RenderVideo.cpp:
(WebCore::RenderVideo::imageChanged):

Canonical link: https://commits.webkit.org/289342@main